--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+# рабочая директрория курса DST
 DST-101-Modul
-Project_0/__pycache__/game_v2.cpython-310.pyc
+# игнорируем все папки с кешем и их содержимым
+**/__pycache__/
+# файл данных большого объёма
 Project_1/data/dst-3.0_16_1_hh_database.csv
+# служебный файл
 requirements.txt
