--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ DST-101-Modul
 Project_1/data/dst-3.0_16_1_hh_database.csv
 # служебный файл
 requirements.txt
+# 7770 и 5590  - коментарии для коммитов
