--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# 7770 и 5590  - коментарии для коммитов
+
 # рабочая директрория курса DST
 DST-101-Modul
 # игнорируем все папки с кешем и их содержимым
@@ -6,4 +8,5 @@ DST-101-Modul
 Project_1/data/dst-3.0_16_1_hh_database.csv
 # служебный файл
 requirements.txt
-# 7770 и 5590  - коментарии для коммитов
+# настройка рабочей среды
+IDE.code-workspace
