--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ Project_1/data/dst-3.0_16_1_hh_database.csv
 Project_3/data/hotels.csv
 # служебный файл
 requirements.txt
+requirements_7770.txt
+requirements_5590.txt
 # настройка рабочей среды
 IDE.code-workspace
 # текущий рабочий файл 
